register user feature added

--- a/public/statics/index.html
+++ b/public/statics/index.html
@@ -190,7 +190,7 @@
           <div class="dashboard-intro text-center p-3">
             <h3 class="display-4">👨‍💻</h3>
             <h5 class="mb-3">Welcome, Tanzim Rahman!</h5>
-            <p>Maktro Management System</p>
+            <p>Store Management System</p>
           </div>
           <!-- <div class="profit card border-warning text-uppercase my-3">
           <div class="card-header bg-warning border-warning">
