--- a/public/statics/login.html
+++ b/public/statics/login.html
@@ -32,7 +32,7 @@
       <form class="form-signin">
         <img class="mb-3" src="../images/logo.png" height="72" />
         <h1 class="h5 mb-5 text-warning font-weight-normal">
-          Maktro Management System
+          Store Management System
         </h1>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input
